Commit changes